# portfolio_project_gov_companies_data_api_and_app

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml.example
