[project]
name = "registry-sentinel"
version = "0.1.0"
description = "Audit-ready data platform ingesting UK Companies House data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx",
    "pydantic",
    "tenacity",
    "dbt-core",
    "dbt-postgres",
    "dagster",
    "dagster-webserver",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "respx",
    "ruff",
    "sqlfluff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry_sentinel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
